--- a/balance/templates/inicio.html
+++ b/balance/templates/inicio.html
@@ -38,7 +38,7 @@ Movimientos
             <td>{{ mov.to_currency }}</td>
             <td>{{ mov.to_quantity }}</td>
         </tr>
-        <!-- BUCLE DE ERRORES, NO LO NECESITO DE MOMENTO -->
+        <!-- BUCLE DE ERRORES -->
         
         {% if mov.errores %}
             <tr>
