cambio tamaño titulos

--- a/balance/templates/inicio.html
+++ b/balance/templates/inicio.html
@@ -5,7 +5,7 @@ Inicio
 {% endblock head_title %}
 
 {% block page_title %}
-Movimientos
+MOVIMIENTOS
 {% endblock page_title %}
 
 {% block contenido %}
@@ -49,7 +49,7 @@ Movimientos
     {% endfor %}
     {% else %}
         <tr>
-            <td clas colspan="5" class="lista-vacia">
+            <td clas colspan="7" class="lista-vacia">
                 SIN MOVIMIENTOS
             </td>
         </tr>
